# docs/swagger.json
@@ -74,10 +74,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Успешный ответ",
-                        "schema": {
-                            "$ref": "#/definitions/dto.GetInfoRes"
-                        }
+                        "description": "Успешный ответ"
                     },
                     "400": {
                         "description": "Неверный запрос.",
